src/tests/snapshots/synoik__tests__window_opening__check_target_size@fsT-dwP0.25-b-wfsBN.snap
---
source: src/tests/window_opening.rs
description: "open fullscreen: true\ndefault column width: P0.25\nborder on\nwant fullscreen: BN"
expression: snapshot
---
initial configure:
size: 1280 × 720, bounds: 1240 × 680, states: [Fullscreen]

post-map configures:
size: 1280 × 720, bounds: 1240 × 680, states: [Fullscreen, Activated]

unfullscreen configure:
size: 292 × 680, bounds: 1240 × 680, states: [Activated]
